# waffle_test

./: ReadMe.md
waffle/: CMakeLists.txt  build.sh
waffle/benchmark/: CMakeLists.txt
waffle/benchmark/src/: proxy_benchmark.cpp  timer.h
waffle/cmake-modules/: Dependencies.cmake
waffle/libclient/src/: client.h  command_response_reader.cpp  command_response_reader.h  proxy_client.cpp  proxy_client.h
waffle/libstorage/src/: redis.cpp  redis.h  storage_interface.h
waffle/proxy/src/: Cache.cpp  Cache.hpp  FrequencySmoother.cpp  FrequencySmoother.hpp  encryption_engine.cpp  encryption_engine.h  evictedItems.h  proxy.h  queue.cpp  queue.h  util.cpp  util.h  waffle_proxy.h
waffle/server/src/: proxy_server.cpp
waffle/service/: CMakeLists.txt
waffle/service/src/: thrift_handler.cpp  thrift_handler.h  thrift_handler_factory.cpp  thrift_handler_factory.h  thrift_response_client.cpp  thrift_response_client_map.cpp  thrift_server.cpp  thrift_server.h  thrift_utils.h  waffle_thrift.cpp  waffle_thrift.h  waffle_thrift_response.cpp  waffle_thrift_response_server.skeleton.cpp  waffle_thrift_server.skeleton.cpp
waffle/thrift/: proxy.thrift
waffle/tracefiles/corr-queries/: input.txt
waffleClient/: CMakeLists.txt
waffleClient/benchmark/: CMakeLists.txt
waffleClient/benchmark/src/: proxy_benchmark.cpp
waffleClient/cmake-modules/: Dependencies.cmake
waffleClient/cmakebuild/: CMakeCache.txt  Makefile  cmake_install.cmake
waffleClient/cmakebuild/benchmark/: Makefile  cmake_install.cmake
waffleClient/cmakebuild/libclient/: Makefile  cmake_install.cmake
waffleClient/cmakebuild/libstorage/: Makefile  cmake_install.cmake
waffleClient/cmakebuild/proxy/: Makefile  cmake_install.cmake
waffleClient/cmakebuild/server/: Makefile  cmake_install.cmake
waffleClient/data/BST_Latency_FriMar315:16/: 1
waffleClient/data/BST_Latency_FriMar315:18/: 1
waffleClient/data/BST_Latency_FriMar315:20/: 1
waffleClient/data/BST_Latency_FriMar315:46/: 1
waffleClient/data/BST_Latency_FriMar315:47/: 1
waffleClient/data/BST_Latency_FriMar315:49/: 1
waffleClient/data/BST_Latency_FriMar315:51/: 1
waffleClient/data/BST_Latency_FriMar315:53/: 1
waffleClient/data/BST_Latency_FriMar315:55/: 1
waffleClient/data/BST_Latency_FriMar315:57/: 1
waffleClient/data/BST_Latency_FriMar315:58/: 1
waffleClient/data/BST_Latency_FriMar316:00/: 1
waffleClient/data/BST_Latency_MonFeb2013:01/: 1
waffleClient/data/BST_Latency_MonFeb2013:07/: 1
waffleClient/data/BST_Latency_MonFeb2014:16/: 1
waffleClient/data/BST_Latency_MonFeb2014:18/: 1
waffleClient/data/BST_Latency_MonFeb2016:25/: 1
waffleClient/data/BST_Latency_MonFeb2703:54/: 1
waffleClient/data/BST_Latency_MonFeb2703:58/: 1
waffleClient/data/BST_Latency_MonFeb2704:02/: 1
waffleClient/data/BST_Latency_MonFeb2704:03/: 1
waffleClient/data/BST_Latency_MonFeb2704:06/: 1
waffleClient/data/BST_Latency_MonFeb2704:07/: 1
waffleClient/data/BST_Latency_MonFeb2704:09/: 1
waffleClient/data/BST_Latency_MonFeb2704:12/: 1
waffleClient/data/BST_Latency_MonFeb2713:02/: 1
waffleClient/data/BST_Latency_MonFeb2713:06/: 1
waffleClient/data/BST_Latency_MonFeb2713:09/: 1
waffleClient/data/BST_Latency_MonFeb2713:10/: 1
waffleClient/data/BST_Latency_MonFeb2713:12/: 1
waffleClient/data/BST_Latency_MonFeb2713:19/: 1
waffleClient/data/BST_Latency_MonFeb2713:29/: 1
waffleClient/data/BST_Latency_MonFeb2714:03/: 1
waffleClient/data/BST_Latency_MonFeb2714:06/: 1
waffleClient/data/BST_Latency_MonFeb2714:10/: 1
waffleClient/data/BST_Latency_MonFeb2714:13/: 1
waffleClient/data/BST_Latency_MonFeb2714:49/: 1
waffleClient/data/BST_Latency_MonFeb2714:53/: 1
waffleClient/data/BST_Latency_MonFeb2715:37/: 1
waffleClient/data/BST_Latency_MonFeb2715:48/: 1
waffleClient/data/BST_Latency_MonFeb2715:53/: 1
waffleClient/data/BST_Latency_MonFeb2716:03/: 1
waffleClient/data/BST_Latency_MonFeb2716:05/: 1
waffleClient/data/BST_Latency_MonFeb2716:08/: 1
waffleClient/data/BST_Latency_MonFeb2721:15/: 1
waffleClient/data/BST_Latency_MonFeb2721:16/: 1
waffleClient/data/BST_Latency_MonFeb2721:34/: 1
waffleClient/data/BST_Latency_SunFeb1919:05/: 1
waffleClient/data/BST_Latency_SunFeb1923:21/: 1
waffleClient/data/BST_Latency_SunFeb1923:23/: 1
waffleClient/data/BST_Latency_SunFeb2602:43/: 1
waffleClient/data/BST_Latency_SunFeb2602:54/: 1
waffleClient/data/FriFeb1018:39/: 1
waffleClient/proxy/: CMakeLists.txt
waffleClient/server/: CMakeLists.txt
waffleClient/server/src/: proxy_server.cpp
(+515 files in other folders)
